Added a Related Work Chapter structured as in the feedback of jose.

--- a/example.bib
+++ b/example.bib
@@ -121,8 +121,42 @@
 }
 
 
+@article{Guoguo,
+  title={Guoguo: Enabling Fine-grained Indoor Localization via Smartphone},
+  author={Kaikai Liu et al.},
+  journal={},
+  volume={},
+  number={},
+  pages={},
+  year={2013},
+  publisher={}
+}
+
+@article{Delmastro,
+  title={Design and Analysis of a Bluetooth-Based Indoor Localization System},
+  author={Bruno R. e Delmastro F.},
+  journal={Conti M., Giordano S., Gregori E., Olariu S. (eds) Personal Wireless Communications. Lecture Notes in Computer Science, vol 2775. Springer},
+  volume={},
+  number={},
+  pages={},
+  year={2003},
+  publisher={}
+}
+
+
+@article{Taniuchi,
+  title={Robust wi-fi based indoor poitioning with ensemble learning},
+  author={D. Raniuchi and T. Maekawa},
+  journal={IEEE 10th International Conference on Wireless and Mobile Computing, Networking and Communications},
+  volume={},
+  number={},
+  pages={592-597},
+  year={2014},
+  publisher={}
+}
+
 @article{Carrera2,
-  title={room recognition using discriminative ensemble learning with hidden markov models for smartphones},
+  title={Room Recognition Using Discriminative Ensemble Learning with Hidden Markov Models for Smartphones},
   author={J.L. Carrera V. et al.},
   journal={\url{https://arxiv.org/abs/1804.09005}},
   volume={},
@@ -131,6 +165,57 @@
   year={2018},
   publisher={}
 }
+
+@article{IEEE,
+  title={A time-based passive source localization system for narrow-band signal},
+  author={——},
+  journal={The IEEE International Conference on Communications (ICC)},
+  volume={39},
+  number={},
+  pages={4599-4605},
+  year={June 2015},
+  publisher={}
+}
+
+
+@article{Horus,
+  title={The horus wlan location determination system},
+  author={M. Youseff and A. Agrawala},
+  journal={Proceedings of the International Conference on Mobile Systems, Applications, and Services (Mobisys05)},
+  volume={},
+  number={},
+  pages={205-218},
+  year={2005},
+  publisher={}
+}
+
+@article{Kakiuchi,
+  title={Pedestrian dead reckoning for mobile phones trhough walking and running mode recognition},
+  author={N. Kakiuchi and S. Kamijo},
+  journal={Proceedings of the 16th International IEEE Annual Conference on Intelligent Transportation Systems (ITSC 2013)},
+  volume={},
+  number={},
+  pages={261-267},
+  year={2013},
+  publisher={}
+}
+
+
+@article{Borestein,
+  title={Heuristic drift elimination for personnel tracking systems},
+  author={J. Borestein and L. Ojeda},
+  journal={The Journal of Navigation},
+  volume={},
+  number={},
+  pages={591-606},
+  year={2010},
+  publisher={}
+}
+
+J. Borestein and L. Ojeda. Heuristic drift elimination
+for personnel tracking systems. The Journal of
+Navigation, 63(4):591–606, 2010.
+
 
 @article{Carrera3,
   title={A Real-time Indoor Tracking System in Smartphones},
