--- a/thesis.tex
+++ b/thesis.tex
@@ -195,6 +195,7 @@ The number of mobile applications as well as the number of mobile devices is gro
 \textbf{GHz} & \textbf{G}iga\textbf{H}ert\textbf{Z}\\
 \textbf{GPIO} & \textbf{G}eneral \textbf{P}urpose \textbf{I}nput \textbf{O}utput\\
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
+\textbf{HDE} & \textbf{H}euristic \textbf{D}rift \textbf{E}limination\\
 \textbf{IMU} & \textbf{I}nertial \textbf{M}easurement \textbf{U}nits\\
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 \textbf{kbps} & \textbf{k}ilo \textbf{b}it \textbf{p}er \textbf{s}econd\\
@@ -238,6 +239,7 @@ The number of mobile applications as well as the number of mobile devices is gro
 \include{Chapters/Chapter4} 
 \include{Chapters/Chapter5}
 \include{Chapters/Chapter6}
+\include{Chapters/Chapter7}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
