Started with background theory, client/server and fingerprinting.

--- a/example.bib
+++ b/example.bib
@@ -120,6 +120,17 @@
   publisher={}
 }
 
+@article{Nagpal,
+  title={Indoor positioning using magnetic compass and accelerometer of smartphones},
+  author={P. Nagpal and R. Rashidzadeh},
+  journal={International Conference on Selected Topics in Mobile and Wireless Networking MoWNet},
+  volume={},
+  number={},
+  pages={140-145},
+  year={2013},
+  publisher={}
+}
+
 
 @article{Guoguo,
   title={Guoguo: Enabling Fine-grained Indoor Localization via Smartphone},
