Chapter three added Fingerprint and Range Based Propagation Localization

--- a/example.bib
+++ b/example.bib
@@ -131,6 +131,38 @@
   publisher={}
 }
 
+@article{Sarkar,
+  title={A survey of various propagation models for mobile communication},
+  author={Sarkar, Tapan K., et al.},
+  journal={Antennas and Propagation Magazine,  IEEE 45.3},
+  volume={},
+  number={},
+  pages={51-82},
+  year={2003},
+  publisher={}
+}
+
+@article{Kurt,
+  title={Indoor Tracking with Kalman Filters using RSS-based Ranging},
+  author={Adrian Kurt},
+  journal={Bachelorarbeit Universität Bern},
+  volume={},
+  number={},
+  pages={4-5},
+  year={2015},
+  publisher={}
+}
+
+@article{ZanLi,
+  title={A Passive WiFi Source Localization System based on Fine-grained Power-based Trilateration},
+  author={Zan Li, Braun T., Dimitrova D.C.},
+  journal={IEEE International Symposium on a World of Wireless, Mobile and Multimedia Networks (WoWMoM)},
+  volume={},
+  number={},
+  pages={},
+  year={June 2015},
+  publisher={}
+}
 
 @article{Guoguo,
   title={Guoguo: Enabling Fine-grained Indoor Localization via Smartphone},
