--- a/thesis.tex
+++ b/thesis.tex
@@ -192,6 +192,7 @@ The number of mobile applications as well as the number of mobile devices is gro
 \textbf{AN} & \textbf{A}nchor \textbf{N}ode\\
 \textbf{API} & \textbf{A}pplication \textbf{P}rogramming \textbf{I}nterface\\
 \textbf{CDS} & \textbf{C}ommunication \textbf{D}istributed \textbf{S}ystem\\
+\textbf{dB} 6 \textbf{D}eci\textbf{B}ell\\
 \textbf{GHz} & \textbf{G}iga\textbf{H}ert\textbf{Z}\\
 \textbf{GPIO} & \textbf{G}eneral \textbf{P}urpose \textbf{I}nput \textbf{O}utput\\
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
@@ -200,12 +201,14 @@ The number of mobile applications as well as the number of mobile devices is gro
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 \textbf{kbps} & \textbf{k}ilo \textbf{b}it \textbf{p}er \textbf{s}econd\\
 \textbf{KNN} & \textbf{K} \textbf {N}earest \textbf{N}eighbor\\
+\textbf{LDPL} & \textbf{L}og-normal \textbf {D}istane \textbf{P}ath \textbf{L}oss\\
 \textbf{Mbps} & \textbf{M}ega \textbf{b}it \textbf{p}er \textbf{s}econd\\
 \textbf{MCL} & \textbf{M}onte \textbf{C}arlo \textbf{L}ocalization\\
 \textbf{MF} & \textbf{M}agnetic \textbf{F}ield\\
 \textbf{MHz} & \textbf{M}ega\textbf{H}ert\textbf{Z}\\
 \textbf{ML} & \textbf{M}achine \textbf{L}earning\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
+\textbf{NLR} & \textbf{N}on-\textbf{L}inear \textbf{R}egression\\
 \textbf{OS} & \textbf{O}perating \textbf{S}ystem\\
 \textbf{PRF} & \textbf{P}ulse \textbf{R}epetition \textbf{F}requency\\
 \textbf{RTLS} & \textbf{R}eal \textbf{T}ime \textbf{L}ocating \textbf{S}ystem\\
