Finished chapter 3 with feedback from jose

--- a/example.bib
+++ b/example.bib
@@ -17,6 +17,13 @@
   note = {Accessed: 2018-07-23}
 }
 
+@misc{ITU,
+  title = {{ITU:} Characteristics of ultra-wideband technology},
+  howpublished = {\url{http://www.itu.int/dms_pubrec/itu-r/rec/sm/R-REC-SM.1755-0-200605-I!!PDF-E.pdf}},
+  note = {Accessed: 2018-09-29}
+}
+
+
 @misc{SewioTDOA,
   title = {{Sewio:} UWB Technology - Time difference of arrival},
   howpublished = {\url{https://www.sewio.net/technology/time-difference-of-arrival/}},
@@ -133,7 +140,7 @@
 
 @article{Sarkar,
   title={A survey of various propagation models for mobile communication},
-  author={Sarkar, Tapan K., et al.},
+  author={Sarkar Tapan K. et al.},
   journal={Antennas and Propagation Magazine,  IEEE 45.3},
   volume={},
   number={},
@@ -155,14 +162,18 @@
 
 @article{ZanLi,
   title={A Passive WiFi Source Localization System based on Fine-grained Power-based Trilateration},
-  author={Zan Li, Braun T., Dimitrova D.C.},
+  author={Z. Li; T. Braun and D.C. Dimitrova},
   journal={IEEE International Symposium on a World of Wireless, Mobile and Multimedia Networks (WoWMoM)},
   volume={},
   number={},
-  pages={},
+  pages={1-9},
   year={June 2015},
   publisher={}
 }
+
+
+
+
 
 @article{Guoguo,
   title={Guoguo: Enabling Fine-grained Indoor Localization via Smartphone},
