Finished refactoring of 5th chapter according to joses feedback.

--- a/thesis.tex
+++ b/thesis.tex
@@ -192,7 +192,7 @@ The number of mobile applications as well as the number of mobile devices is gro
 \textbf{AN} & \textbf{A}nchor \textbf{N}ode\\
 \textbf{API} & \textbf{A}pplication \textbf{P}rogramming \textbf{I}nterface\\
 \textbf{CDS} & \textbf{C}ommunication \textbf{D}istributed \textbf{S}ystem\\
-\textbf{dB} 6 \textbf{D}eci\textbf{B}ell\\
+\textbf{dB} & \textbf{D}eci\textbf{B}ell\\
 \textbf{GHz} & \textbf{G}iga\textbf{H}ert\textbf{Z}\\
 \textbf{GPIO} & \textbf{G}eneral \textbf{P}urpose \textbf{I}nput \textbf{O}utput\\
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
