--- a/thesis.tex
+++ b/thesis.tex
@@ -215,6 +215,7 @@ The number of mobile applications as well as the number of mobile devices is gro
 \textbf{RTT} & \textbf{R}ound \textbf{T}rip \textbf{T}ime\\
 \textbf{RSSI} & \textbf{R}eceived \textbf{S}ignal \textbf{S}trengh \textbf{I}ndication\\
 \textbf{SDS-TWR} & \textbf{S}ymmetrical \textbf{D}ouble \textbf{S}ided - \textbf{T}wo \textbf{W}ay \textbf{R}anging\\
+\textbf{S.D} & \textbf{S}tandard \textbf{.} \textbf{D}eviation\\
 \textbf{TAG} & \textbf{TA}r\textbf{G}et\\
 \textbf{TDOA} & \textbf{T}ime \textbf{D}ifference \textbf{O}f \textbf{A}rrival \\
 \textbf{ToF} & \textbf{T}ime \textbf{o}f \textbf{F}light\\
