--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -4,7 +4,7 @@
 
 \label{AppendixA} % For referencing this appendix elsewhere, use \ref{AppendixA}
 
-\section{Figures of the trajectories used in the experiments}
+\section{Figures of the Trajectories used in the Experiments}
 
 \begin{figure}[th]
 \centering
