--- a/example.bib
+++ b/example.bib
@@ -106,7 +106,7 @@
 
 @article{GPSforIndoor,
   title={Indoor Positioning Based on Global Positioning System Signals},
-  author={Kerem Ozsoy, Ayhan Bozkurt and Ibrahim Tekin},
+  author={Kerem Ozsoy; Ayhan Bozkurt and Ibrahim Tekin},
   journal={\url{https://onlinelibrary.wiley.com/doi/abs/10.1002/mop.27520}},
   volume={},
   number={},
@@ -118,7 +118,7 @@
 
 @article{Carrera,
   title={A real-time robust indoor tracking system in smartphones},
-  author={J.L. Carrera V. et al.},
+  author={J.L. Carrera; Z. Zhao; T. Braun and Z. Li},
   journal={Computer Communications},
   volume={},
   number={},
@@ -178,10 +178,10 @@
 @article{Guoguo,
   title={Guoguo: Enabling Fine-grained Indoor Localization via Smartphone},
   author={Kaikai Liu et al.},
-  journal={},
+  journal={Proceeding of the 11th annual international conference on Mobile systems, applications, and services},
   volume={},
   number={},
-  pages={},
+  pages={235-248},
   year={2013},
   publisher={}
 }
@@ -211,7 +211,7 @@
 
 @article{Carrera2,
   title={Room Recognition Using Discriminative Ensemble Learning with Hidden Markov Models for Smartphones},
-  author={J.L. Carrera V. et al.},
+  author={J.L. Carrera; Z. Zhao and T. Braun},
   journal={\url{https://arxiv.org/abs/1804.09005}},
   volume={},
   number={},
@@ -222,7 +222,7 @@
 
 @article{IEEE,
   title={A time-based passive source localization system for narrow-band signal},
-  author={——},
+  author={Z. Li; T. Braun and D.C. Dimitrova},
   journal={The IEEE International Conference on Communications (ICC)},
   volume={39},
   number={},
