Some minor changes due to second feedback of jose.

--- a/thesis.tex
+++ b/thesis.tex
@@ -169,7 +169,7 @@ headsepline, % Uncomment to get a line under the header
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-The number of mobile applications as well as the number of mobile devices is growing continously, which led to more and more interest in the research field of indoor positioning. Many indoor localization solutions rely on common radio signal strength indication or on Inertial Measurement Units (IMU). In this work we present an server-based indoor positioning algorithm based on time of flight measurements of ultra wideband (UWB) signals. In addition, our particle filter approach fuses IMU measurements, floor plan information and WiFi/UWB signal strength fingerprinting, to achieve a high accuracy indoor localization. We evaluated our system, running on Raspberry Pi devices equipped with Sequitur Pi UWB transmitters, in complex test scenarios performed in a real indoor environment. Moreover, we compared our system to the commercial indoor localization system Sequitur InGPS Lite, distributed by UNISET company. Results show that our algorithm could achieve an average tracking error of $0.45m$ and a 90\% accuracy of $0.87m$. Thus, our first prototype can keep up with the Sequitur InGPS Lite system and outperforms previous signal strength implementations, which makes it highly promising for future research.
+The number of mobile applications as well as the number of mobile devices is growing continously, which led to more and more interest in the research field of indoor positioning. Many indoor localization solutions rely on common radio signal strength indication or on Inertial Measurement Units (IMU). In this work we present a server-based indoor positioning algorithm based on time of flight measurements of ultra wideband (UWB) signals for ranging, IMUs for move detection and floor plan information. We implemented a particle filter to fuse all these information to achieve high indoor localization performance. We evaluated our system, running on Raspberry Pi devices equipped with Sequitur Pi UWB transmitters, in complex real indoor environments. Moreover, we compared our system to the commercial indoor localization system Sequitur InGPS Lite, distributed by UNISET company. Results show that our algorithm could achieve an average tracking error of $0.45m$ and a 90\% accuracy of $0.87m$. Thus, our first prototype can keep up with the Sequitur InGPS Lite system and outperforms previous signal strength implementations, which makes it highly promising for future research.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
