Feedback nr 2 in chapter 6,7 added. Started related work disadvantages.

--- a/example.bib
+++ b/example.bib
@@ -200,7 +200,7 @@
 
 @article{Taniuchi,
   title={Robust wi-fi based indoor poitioning with ensemble learning},
-  author={D. Raniuchi and T. Maekawa},
+  author={D. Taniuchi and T. Maekawa},
   journal={IEEE 10th International Conference on Wireless and Mobile Computing, Networking and Communications},
   volume={},
   number={},
