Last spelling check.

--- a/thesis.tex
+++ b/thesis.tex
@@ -169,7 +169,7 @@ headsepline, % Uncomment to get a line under the header
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-The number of mobile applications as well as the number of mobile devices is growing continously, which led to more and more interest in the research field of indoor positioning. Many indoor localization solutions rely on common radio signal strength indication or on Inertial Measurement Units (IMU). In this work we present a server-based indoor positioning algorithm based on time of flight measurements of ultra wideband (UWB) signals for ranging, IMUs for move detection and floor plan information. We implemented a particle filter to fuse all these information to achieve high indoor localization performance. We evaluated our system, running on Raspberry Pi devices equipped with Sequitur Pi UWB transmitters, in complex real indoor environments. Moreover, we compared our system to the commercial indoor localization system Sequitur InGPS Lite, distributed by UNISET company. Results show that our algorithm could achieve an average tracking error of $0.45m$ and a 90\% accuracy of $0.87m$. Thus, our first prototype can keep up with the Sequitur InGPS Lite system and outperforms previous signal strength implementations, which makes it highly promising for future research.
+The number of mobile applications as well as the number of mobile devices is growing continuously, which led to more and more interest in the research field of indoor positioning. Many indoor localization solutions rely on common radio signal strength indication or on Inertial Measurement Units (IMU). In this work, we present a server-based indoor positioning algorithm based on time of flight measurements of ultra-wideband (UWB) signals for ranging, IMUs for movement detection and floor plan information. We implemented a particle filter to fuse all these information to achieve high indoor localization performance. We evaluated our system, running on a centralized server connected to the target and anchor Raspberry Pi devices equipped with Sequitur Pi UWB transmitters, in complex real indoor environments. Moreover, we compared our system to the commercial indoor localization system Sequitur InGPS Lite, distributed by UNISET company. Results show that our algorithm could achieve an average tracking error of $0.45m$ and a 90\% accuracy of $0.87m$. Thus, our first prototype can keep up with the Sequitur InGPS Lite system and outperforms previous signal strength implementations, which makes it highly promising for future research.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -192,7 +192,7 @@ The number of mobile applications as well as the number of mobile devices is gro
 \textbf{AN} & \textbf{A}nchor \textbf{N}ode\\
 \textbf{API} & \textbf{A}pplication \textbf{P}rogramming \textbf{I}nterface\\
 \textbf{CDS} & \textbf{C}ommunication \textbf{D}istributed \textbf{S}ystem\\
-\textbf{dB} & \textbf{D}eci\textbf{B}ell\\
+\textbf{dB} & \textbf{d}eci\textbf{B}ell\\
 \textbf{GHz} & \textbf{G}iga\textbf{H}ert\textbf{z}\\
 \textbf{GPIO} & \textbf{G}eneral \textbf{P}urpose \textbf{I}nput \textbf{O}utput\\
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
@@ -201,7 +201,7 @@ The number of mobile applications as well as the number of mobile devices is gro
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 \textbf{kbps} & \textbf{k}ilo \textbf{b}it \textbf{p}er \textbf{s}econd\\
 \textbf{KNN} & \textbf{K} \textbf {N}earest \textbf{N}eighbor\\
-\textbf{LDPL} & \textbf{L}og-normal \textbf {D}istane \textbf{P}ath \textbf{L}oss\\
+\textbf{LDPL} & \textbf{L}og-normal \textbf {D}istance \textbf{P}ath \textbf{L}oss\\
 \textbf{Mbps} & \textbf{M}ega \textbf{b}it \textbf{p}er \textbf{s}econd\\
 \textbf{MCL} & \textbf{M}onte \textbf{C}arlo \textbf{L}ocalization\\
 \textbf{MF} & \textbf{M}agnetic \textbf{F}ield\\
@@ -213,7 +213,7 @@ The number of mobile applications as well as the number of mobile devices is gro
 \textbf{PRF} & \textbf{P}ulse \textbf{R}epetition \textbf{F}requency\\
 \textbf{RTLS} & \textbf{R}eal \textbf{T}ime \textbf{L}ocating \textbf{S}ystem\\
 \textbf{RTT} & \textbf{R}ound \textbf{T}rip \textbf{T}ime\\
-\textbf{RSSI} & \textbf{R}eceived \textbf{S}ignal \textbf{S}trengh \textbf{I}ndication\\
+\textbf{RSSI} & \textbf{R}eceived \textbf{S}ignal \textbf{S}trength \textbf{I}ndication\\
 \textbf{SDS-TWR} & \textbf{S}ymmetrical \textbf{D}ouble \textbf{S}ided - \textbf{T}wo \textbf{W}ay \textbf{R}anging\\
 \textbf{S.D} & \textbf{S}tandard \textbf{.} \textbf{D}eviation\\
 \textbf{TAG} & \textbf{TA}r\textbf{G}et\\
