Added wifiaccess indication on floormap. Final corrections.

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -42,8 +42,16 @@
 
 \begin{figure}[th]
 \centering
-\includegraphics[width=1.0\textwidth]{Figures/trajectory5_withAnchors}
+\includegraphics[width=0.8\textwidth]{Figures/trajectory5_withAnchors}
 \decoRule
 \caption[Trajectory 5]{Checkpoints and path of trajectory 5 with anchor positions.}
 \label{fig:trajectory5_withAnchorsAppendix}
+\end{figure}
+
+\begin{figure}[th]
+\centering
+\includegraphics[width=1.0\textwidth]{Figures/wifi_access}
+\decoRule
+\caption[WiFi Access Points]{Positions of WiFi access points in the floorplan.}
+\label{fig:wifi_accessAppendix}
 \end{figure}
