Added the corrections based on comments of Prof Braun to chapters 1 to 5. Chapter 6 not changed yet, as well as chapter 2/3 have to be combined.

--- a/example.bib
+++ b/example.bib
@@ -115,6 +115,18 @@
   publisher={}
 }
 
+@article{bresenham,
+  title={Algorithm for computer control of a digital plotter},
+  author={J. E. Bresenham},
+  journal={IBM Systems Journal},
+  volume={4},
+  number={},
+  pages={25-30},
+  year={1965},
+  publisher={IBM}
+}
+
+
 
 @article{Carrera,
   title={A real-time robust indoor tracking system in smartphones},
