--- a/thesis.tex
+++ b/thesis.tex
@@ -169,7 +169,7 @@ headsepline, % Uncomment to get a line under the header
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-Many indoor localization solutions rely on common radio signal strength indication or on Inertial Measurement Units (IMU). In this work, we present a server-based indoor positioning algorithm based on time of flight measurements of ultra-wideband (UWB) signals for ranging, IMUs for movement detection and floor plan information. We implemented a particle filter to fuse all the information to achieve high indoor localization performance. We evaluated our system, running on a centralized server connected to the target and anchor Raspberry Pi devices equipped with Sequitur Pi UWB transmitters, in complex real indoor environments. Moreover, we compared our system to the commercial indoor localization system Sequitur InGPS Lite, distributed by UNISET. Results show that our algorithm could achieve an average tracking error of $0.45m$ and a 90\% accuracy of $0.87m$. Thus, our prototype can keep up with the Sequitur InGPS Lite system and outperforms previous signal strength implementations, which makes it highly promising for future research.
+Many indoor localization solutions rely on common radio signal strength indication or on Inertial Measurement Units (IMU). In this work, we present a server-based indoor positioning algorithm based on time of flight measurements of ultra-wideband (UWB) signals for ranging, IMUs for movement detection, and floor plan information. We implemented a particle filter to fuse all the information to achieve high indoor localization performance. We evaluated our system, running on a centralized server connected to the target and anchor Raspberry Pi devices equipped with Sequitur Pi UWB transmitters, in complex real indoor environments. Moreover, we compared our system to the commercial indoor localization system Sequitur InGPS Lite, distributed by UNISET. Results show that our algorithm could achieve an average tracking error of $0.45m$ and a 90\% accuracy of $0.87m$. Thus, our prototype can keep up with the Sequitur InGPS Lite system and outperforms previous signal strength implementations, which makes it highly promising for future research.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -209,8 +209,10 @@ Many indoor localization solutions rely on common radio signal strength indicati
 \textbf{MHz} & \textbf{M}ega\textbf{H}ert\textbf{z}\\
 \textbf{ML} & \textbf{M}achine \textbf{L}earning\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
+\textbf{NLOS} & \textbf{N}on-\textbf{L}ine-\textbf{O}f-\textbf{S}ight\\
 \textbf{NLR} & \textbf{N}on-\textbf{L}inear \textbf{R}egression\\
 \textbf{OS} & \textbf{O}perating \textbf{S}ystem\\
+\textbf{PF} & \textbf{P}article \textbf{F}ilter\\
 \textbf{PRF} & \textbf{P}ulse \textbf{R}epetition \textbf{F}requency\\
 \textbf{RTLS} & \textbf{R}eal \textbf{T}ime \textbf{L}ocating \textbf{S}ystem\\
 \textbf{RTT} & \textbf{R}ound \textbf{T}rip \textbf{T}ime\\
